grammar.js
    program: ($) => seq(optional($.hash_bang_line), repeat($._statement)),

    _statement: ($) => prec.right(seq($.statement, optional($._statement_boundary))),

    export_statement: ($) =>
      choice(
        seq(
          'export',
          choice(
            seq(
              choice('*', $.namespace_export, $.export_clause),
              $._from_clause,
              optional(choice($.import_attribute, $._line_break_before_attributes))
            ),
            alias($._local_export_clause, $.export_clause)
          ),
          $._semicolon
        ),
        seq(
          repeat(field('decorator', $.decorator)),
          'export',
          choice(
            field('declaration', $.declaration),
            seq('default', choice(field('declaration', $.declaration), seq(field('value', $.expression), $._semicolon)))
          )
        )
      ),

    _local_export_clause: ($) =>
      seq('{', commaSep(alias($._local_export_specifier, $.export_specifier)), optional(','), '}'),

    _from_clause: ($) => seq('from', field('source', $.string)),

    expression_statement: ($) => seq($._expressions, $._semicolon),

    _let: () => token(prec(-1, /let/)),

    lexical_declaration: ($) =>
      seq(field('kind', choice('let', alias($._let, 'let'), 'const')), commaSep1($.variable_declarator), $._semicolon),

    variable_declarator: ($) =>
      seq(
        field('name', choice($.identifier, alias('of', $.identifier), $._destructuring_pattern)),
        optional(choice($._initializer, $._line_break_after_binding))
      ),

    statement_block: ($) => prec.right(seq('{', repeat($._statement), '}')),

    if_statement: ($) =>
      prec.right(
        seq(
          'if',
          field('condition', $.parenthesized_expression),
          field('consequence', $._statement),
          optional(field('alternative', $.else_clause))
        )
      ),

    for_in_statement: ($) =>
      seq('for', optional(alias($._await_keyword, 'await')), $._for_header, field('body', $._statement)),

    _for_header: ($) =>
      seq(
        '(',
        choice(
          field('left', choice($._lhs_expression, $.parenthesized_expression)),
          seq(
            field('kind', 'var'),
            field('left', choice($.identifier, alias('of', $.identifier), $._destructuring_pattern)),
            optional($._initializer)
          ),
          seq(
            field('kind', choice('let', 'const')),
            field('left', choice($.identifier, alias('of', $.identifier), $._destructuring_pattern))
          ),
          seq(
            field('kind', choice('using', seq(alias($._await_keyword, 'await'), 'using'))),
            field('left', choice($.identifier, alias('of', $.identifier)))
          )
        ),
        field('operator', choice('in', 'of')),
        field('right', $._expressions),
        ')'
      ),

    parenthesized_expression: ($) => seq('(', $._expressions, ')'),

    //
    // Expressions
    //
    _expressions: ($) => choice($.expression, $.sequence_expression),

    object: ($) =>
      prec(
        'object',
        seq(
          '{',
          commaSep(
            optional(
              choice(
                $.pair,
                $.spread_element,
                $.method_definition,
                alias(choice($.identifier, $._reserved_identifier), $.shorthand_property_identifier)
              )
            )
          ),
          '}'
        )
      ),

    object_pattern: ($) =>
      prec(
        'object',
        seq(
          '{',
          commaSep(
            optional(
              choice(
                $.pair_pattern,
                $.rest_pattern,
                $.object_assignment_pattern,
                alias(choice($.identifier, $._reserved_identifier), $.shorthand_property_identifier_pattern)
              )
            )
          ),
          '}'
        )
      ),

    assignment_pattern: ($) => seq(field('left', $.pattern), '=', field('right', $.expression)),

    object_assignment_pattern: ($) =>
      seq(
        field(
          'left',
          choice(
            alias(choice($._reserved_identifier, $.identifier), $.shorthand_property_identifier_pattern),
            $._destructuring_pattern
          )
        ),
        '=',
        field('right', $.expression)
      ),

    array: ($) => seq('[', commaSep(optional(choice($.expression, $.spread_element))), ']'),

    array_pattern: ($) => seq('[', commaSep(optional(choice($.pattern, $.assignment_pattern))), ']'),

    class: ($) =>
      prec(
        'literal',
        seq(
          repeat(field('decorator', $.decorator)),
          'class',
          field('name', optional($.identifier)),
          optional($.class_heritage),
          field('body', $.class_body)
        )
      ),

    class_declaration: ($) =>
      prec(
        'declaration',
        seq(
          repeat(field('decorator', $.decorator)),
          'class',
          field('name', $.identifier),
          optional($.class_heritage),
          field('body', $.class_body)
        )
      ),

    class_heritage: ($) => seq('extends', $.expression),

    function_expression: ($) =>
      prec(
        'literal',
        seq(
          optional('async'),
          'function',
          field('name', optional($.identifier)),
          $._call_signature,
          field('body', $.statement_block)
        )
      ),

    function_declaration: ($) =>
      prec.right(
        'declaration',
        seq(
          optional('async'),
          'function',
          field('name', $.identifier),
          $._call_signature,
          field('body', $.statement_block)
        )
      ),

    generator_function_declaration: ($) =>
      prec.right(
        'declaration',
        seq(
          optional('async'),
          'function',
          '*',
          field('name', $.identifier),
          $._call_signature,
          field('body', $.statement_block)
        )
      ),

    arrow_function: ($) =>
      prec.right(
        seq(
          optional('async'),
          choice(
            field('parameter', choice(alias($._reserved_identifier, $.identifier), $.identifier)),
            $._call_signature
          ),
          '=>',
          choice(
            field('body', $.expression),
            seq(
              field('body', $.statement_block),
              optional(seq($._arrow_function_block_end, optional($._arrow_function_block_continuation)))
            )
          ),
          optional($._completed_arrow_function)
        )
      ),

    // Override
    _call_signature: ($) => field('parameters', $.formal_parameters),
    _formal_parameter: ($) => choice($.pattern, $.assignment_pattern),

    call_expression: ($) =>
      choice(
        prec('call', seq(field('function', choice($.expression, $.import)), field('arguments', $.arguments))),
        prec('template_call', seq(field('function', $.primary_expression), field('arguments', $.template_string))),
        prec(
          'member',
          seq(
            field('function', $.primary_expression),
            field('optional_chain', $.optional_chain),
            field('arguments', $.arguments)
          )
        )
      ),

    // As in ECMAScript, a member access or index extends the nearest `new` with arguments, while an argument list fills
    // the nearest `new` that still lacks one: `new new A().b` constructs `new A().b`, `new new A().b(2)` constructs
    // `new A().b` with `2`, and `new new A()(2)` constructs `new A()`. The 'member' and 'new' precedences make the parser
    // shift a `.`, `[`, or argument list after a constructor rather than end a `new` without arguments, so that form
    // never takes one. Both forms are primary expressions, so a nested `new` matches the constructor field's type.
    member_expression: ($) =>
      prec(
        'member',
        seq(
          field('object', choice($.expression, $.primary_expression, $.import)),
          choice('.', field('optional_chain', $.optional_chain)),
          field(
            'property',
            choice($.private_property_identifier, reserved('properties', alias($.identifier, $.property_identifier)))
          )
        )
      ),

    subscript_expression: ($) =>
      prec.right(
        'member',
        seq(
          field('object', choice($.expression, $.primary_expression)),
          optional(field('optional_chain', $.optional_chain)),
          '[',
          field('index', $._expressions),
          ']'
        )
      ),

    _lhs_expression: ($) =>
      choice(
        $.member_expression,
        $.subscript_expression,
        $._identifier,
        alias($._reserved_identifier, $.identifier),
        $._destructuring_pattern
      ),

    assignment_expression: ($) =>
      prec.right(
        'assign',
        seq(field('left', choice($.parenthesized_expression, $._lhs_expression)), '=', field('right', $.expression))
      ),

    _initializer: ($) => seq('=', field('value', $.expression)),

    _destructuring_pattern: ($) => choice($.object_pattern, $.array_pattern),

    string: ($) =>
      choice(
        seq('"', repeat(choice(alias($.unescaped_double_string_fragment, $.string_fragment), $.escape_sequence)), '"'),
        seq("'", repeat(choice(alias($.unescaped_single_string_fragment, $.string_fragment), $.escape_sequence)), "'")
      ),

    // Workaround to https://github.com/tree-sitter/tree-sitter/issues/1156
    // We give names to the token() constructs containing a regexp
    // so as to obtain a node in the CST.
    //
    comment: () => token(choice(seq('//', /[^\r\n\u2028\u2029]*/), seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/'))),

    template_string: ($) =>
      seq(
        '`',
        repeat(
          choice(
            alias($._template_chars, $.string_fragment),
            $.escape_sequence,
            alias($._invalid_template_escape, $.escape_sequence),
            $.template_substitution
          )
        ),
        '`'
      ),

    // Tagged templates allow `\x` and `\u` without the hex digits an escape_sequence needs (the cooked string is
    // undefined). The lexer prefers the longer escape_sequence when the digits follow. Untagged templates reject these
    // escapes, but the lexer cannot tell the two apart.
    _invalid_template_escape: () => token.immediate(seq('\\', /[xu]/)),

    number: () => {
      const hexLiteral = seq(choice('0x', '0X'), /[\da-fA-F](_?[\da-fA-F])*/);

      const decimalDigits = /\d(_?\d)*/;
      const signedInteger = seq(optional(choice('-', '+')), decimalDigits);
      const exponentPart = seq(choice('e', 'E'), signedInteger);

      const binaryLiteral = seq(choice('0b', '0B'), /[0-1](_?[0-1])*/);

      const octalLiteral = seq(choice('0o', '0O'), /[0-7](_?[0-7])*/);

      const bigintLiteral = seq(choice(hexLiteral, binaryLiteral, octalLiteral, decimalDigits), 'n');

      const decimalIntegerLiteral = choice(
        '0',
        seq(optional('0'), /[1-9]/, optional(seq(optional('_'), decimalDigits)))
      );

      const decimalLiteral = choice(
        seq(decimalIntegerLiteral, '.', optional(decimalDigits), optional(exponentPart)),
        seq('.', decimalDigits, optional(exponentPart)),
        seq(decimalIntegerLiteral, exponentPart),
        decimalDigits
      );

      return token(choice(hexLiteral, decimalLiteral, binaryLiteral, octalLiteral, bigintLiteral));
    },

    // 'undefined' is syntactically a regular identifier in JavaScript.
    // However, its main use is as the read-only global variable whose
    // value is [undefined], for which there's no literal representation
    // unlike 'null'. We gave it its own rule so it's easy to
    // highlight in text editors and other applications.
    identifier: () => {
      const alpha =
        // oxlint-disable-next-line no-control-regex, no-useless-escape -- Identifiers exclude control characters, and tree-sitter's regex parser rejects an unescaped `[` in a character class.
        /[^\u0000-\u001F\s\p{Zs}0-9:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B\u2028\u2029]|\\u[0-9a-fA-F]{4}|\\u\{[0-9a-fA-F]+\}/u;

      const alphanumeric =
        // oxlint-disable-next-line no-control-regex, no-useless-escape -- Identifiers exclude control characters, and tree-sitter's regex parser rejects an unescaped `[` in a character class.
        /[^\u0000-\u001F\s\p{Zs}:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B\u2028\u2029]|\\u[0-9a-fA-F]{4}|\\u\{[0-9a-fA-F]+\}/u;
      return token(seq(alpha, repeat(alphanumeric)));
    },

    true: () => 'true',
    false: () => 'false',
    arguments: ($) => seq('(', commaSep(optional(choice($.expression, $.spread_element))), ')'),

    class_body: ($) =>
      seq(
        '{',
        repeat(
          choice(
            seq(field('member', $.method_definition), optional(';')),
            seq(field('member', $.field_definition), $._semicolon),
            field('member', $.class_static_block),
            ';'
          )
        ),
        '}'
      ),

    formal_parameters: ($) => seq('(', optional(seq(commaSep1($._formal_parameter), optional(','))), ')'),

    rest_pattern: ($) => prec.right(seq('...', choice($._lhs_expression, $.parenthesized_expression))),

    method_definition: ($) =>
      seq(
        repeat(field('decorator', $.decorator)),
        optional('static'),
        optional('async'),
        optional(choice('get', 'set', '*')),
        field('name', $._property_name),
        field('parameters', $.formal_parameters),
        field('body', alias($._class_member_body, $.statement_block))
      ),

    // The body of a method or a static block, a rule of its own rather than statement_block: sharing it let tree-sitter
    // merge the state after the body's `}` with the one after a function expression's `}`, where `in`, `instanceof`,
    // and `extends` are keywords, so a class member with one of those names could not follow.
    _class_member_body: ($) => seq('{', repeat($._statement), '}'),

    pair: ($) => seq(field('key', $._property_name), ':', field('value', $.expression)),

    pair_pattern: ($) =>
      seq(field('key', $._property_name), ':', field('value', choice($.pattern, $.assignment_pattern))),

    _property_name: ($) =>
      reserved(
        'properties',
        choice(
          alias(choice($.identifier, $._reserved_identifier), $.property_identifier),
          $.private_property_identifier,
          $.string,
          $.number,
          $.computed_property_name
        )
      ),

    _reserved_identifier: ($) =>
      choice(...MEMBER_MODIFIERS, ...CONTEXTUAL_KEYWORDS.map((word) => (word === 'await' ? $._await_keyword : word))),

    _semicolon: ($) =>
      choice($._automatic_semicolon, $._await_identifier_line_break, $._await_yield_identifier_start, ';'),
  },
});

/**
 * Creates a rule to match one or more of the rules separated by a comma
 *
 * @param {Rule} rule
 *
 * @returns {SeqRule}
 */
function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}

/**
 * Creates a rule to optionally match one or more of the rules separated by a comma
 *
 * @param {Rule} rule
 *
 * @returns {ChoiceRule}
 */
function commaSep(rule) {
  return optional(commaSep1(rule));
}
